dev/sonarqube/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  parentRefs:
    - name: docket-dev-gateway
      namespace: dev-frontend
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sonarqube
      backendRefs:
        - name: sonarqube-sonarqube
          port: 9000
